Temp mobile bug fix, fixed white bars on size of page on mobile in landscape mode & (hopefully) changed the scrollbar.

--- a/assets/themes/dark.css
+++ b/assets/themes/dark.css
@@ -4,6 +4,10 @@ html {
   color: white;
 }
 
+#about-section .img-container img {
+  border: 2px solid rgba(0, 0, 0, 0.1);
+}
+
 #about-section .title {
   color: rgb(255, 255, 255);
 }
@@ -82,4 +86,25 @@ html {
   --dot4-color: #00bfff; /* Deep Sky Blue */
   --dot5-color: #00ffff; /* Cyan */
   --bg-color: rgb(0, 0, 0); /* Black */
+}
+
+body::-webkit-scrollbar {
+  width: 16px;
+  background-color: #333333;
+}
+
+body::-webkit-scrollbar-track {
+  border-radius: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+  height: 56px;
+  border-radius: 10px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: #888888;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #555555;
 }
