--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html {
   flex-direction: column;
   background-color: black;
   user-select: none;
+  scroll-behavior: smooth;
 }
 
 #background-shader {
@@ -53,13 +54,24 @@ html {
   overflow: visible;
 }
 
-#about-section img {
+#about-section .img-container {
+  width: 175px;
+  height: 175px;
+  border-radius: 30px;
+  overflow: hidden;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#about-section .img-container img {
   width: 150px;
   height: 150px;
   border-radius: 20px;
   object-fit: cover;
-  margin-bottom: 20px;
-  margin-top: 4vh;
+  border: 2px solid rgba(0, 0, 0, 0.1);
 }
 
 #about-section .title {
@@ -224,7 +236,7 @@ html {
   opacity: 1;
   visibility: visible;
   transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
-}=
+}
 
 .acrylic {
   background: rgba(0, 0, 0, 0.3);
@@ -233,4 +245,25 @@ html {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+}
+
+body::-webkit-scrollbar {
+  width: 16px;
+  background-color: #333333;
+}
+
+body::-webkit-scrollbar-track {
+  border-radius: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+  height: 56px;
+  border-radius: 10px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: #888888;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #555555;
 }
